--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "test": "cypress run",
     "cypress:open": "cypress open",
-    "start": "node index.js",
-    "scss": "sass --watch main.scss styles.css"
+    "start": "node .",
+    "dev": "nodemon . & npm run scss",
+    "scss": "sass --watch src/scss/main.scss public/styles/main.css"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,7 @@
   "homepage": "https://github.com/dave-t-MT/luna-test#readme",
   "devDependencies": {
     "cypress": "^10.3.1",
+    "nodemon": "^2.0.19",
     "sass": "^1.54.0"
   },
   "dependencies": {
